<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Popular Movies</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="settings">Settings</string>

    <string name="title_activity_detail">DetailActivity</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa.</string>

    <!-- detail view mockup -->
    <string name="title">Jurassic Park</string>
    <string name="title_review">Reviews:</string>
    <string name="title_trailer">Trailers: </string>
    <string name="timeline">Jul 2, 1997</string>
    <string name="length">Length</string>
    <string name="review">8.1/10</string>

    <!-- preferences -->
    <string name="pref_dark_theme" tools:ignore="MissingTranslation">pref_dark_theme</string> <!-- deprecated -->
    <string name="pref_theme" tools:ignore="MissingTranslation">pref_theme</string> <!-- key for the pref-->

    <!-- key for the pref-->

    <string name="pref_theme_value_romantic" tools:ignore="MissingTranslation">romantic</string>
    <string name="pref_theme_value_classic" tools:ignore="MissingTranslation">classic</string>

    <string name="pref_theme_entry_romantic" tools:ignore="MissingTranslation">Romantic</string>
    <string name="pref_theme_entry_classic" tools:ignore="MissingTranslation">Classic</string>

    <string name="pref_theme_title_dialog">Theme</string>

    <string name="change_theme_tip">Change your theme</string>

    <!-- Theme -->

    <!-- text to show for empty plot synopsis -->
    <string name="empty_overview">No overview found.</string>
    <string name="empty_release_date">No release date found.</string>
    <string name="empty_title">No title found.</string>
    <string name="empty_rating">No rating found.</string>
    <string name="empty_review">No review found.</string>
    <string name="empty_trailer">No trailer found.</string>

    <string name="no_trailer_no_network_connection">Connect to the Internet to see trailers.</string>
    <string name="no_review_no_network_connection">Connect to the Internet to see reviews.</string>

    <!-- detail activity button strings -->
    <string name="bn_see_reviews">See Reviews</string>
    <string name="bn_watch_trailors">Watch Trailors</string>

    <string name="content_description_trailer_preview">Trailer Preview Image</string>
    <string name="name_movie">Title</string>
    <string name="release_date">Release Date</string>
    <string name="average_vote">Average Rating</string>
    <string name="plot_synopsis">Overview</string>

    <!-- action bar title -->
    <string name="most_popular">Popular Movies</string>
    <string name="highest_rated">Top Rated Movies</string>
    <string name="favorite">My Favorite</string>
    <string name="movie">Movies</string>
    <!--<string name="comments_movie">Comments</string>-->
    <string name="no_comments_cocktail">No comments available</string>
    <string name="about_this_app">This product uses the TMDb API but is not endorsed or certified by TMDb. It can also be a reference app for the POPULAR MOVIES project of Udacity\'s Android Developer Nanodegree program.</string>
    <string name="about_this_app_title">About This App</string>


</resources>
